updated manifest file

--- a/manifest.json
+++ b/manifest.json
@@ -7087,7 +7087,10 @@
   },
   "files": {
     "late-releasing-block.Rmd": {
-      "checksum": "55024e3fe8facca56ed1cf9f8c6cb3c6"
+      "checksum": "1867e8e3fd3390da3d267991adef21eb"
+    },
+    "Mount_Sinai_Logo_H.png": {
+      "checksum": "2947092f1b4ba7d991e336025e6b44d7"
     },
     "README.md": {
       "checksum": "d5e6fdc44627e6e8cdb45544e43c80d3"
